--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         }
     ],
     "require": {
-        "php" : "~5.5|~7.0"
+        "php" : "~5.5|~7.0",
+        "container-interop/container-interop" : "~1.1"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
