--- a/.gitattributes
+++ b/.gitattributes
@@ -2,8 +2,9 @@
 # https://www.kernel.org/pub/software/scm/git/docs/gitattributes.html
 
 # Ignore all test and documentation with "export-ignore".
+*.php diff=php
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
 /phpunit.xml.dist   export-ignore
-/.scrutinizer.yml   export-ignore
 /tests              export-ignore
+/build export-ignore
