--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,9 @@
         "phpunit/phpunit" : "4.*",
         "squizlabs/php_codesniffer": "~2.3"
     },
+    "suggest": {
+        "ext/xdebug": "Debugger and profiling"
+    },
     "autoload": {
         "psr-4": {
             "MartiAdrogue\\Container\\": "src"
